# nc2ldap

./: .env.template  .gitignore  Dockerfile  README.md  entrypoint.sh  openstage40-ldap-profile.txt  os40-ldap-profile.txt  pyproject.toml  tox.ini
.github/workflows/: pull_request.yaml  release.yaml
src/: constants.py  contact.py  main.py  phonebook.py  requirements.txt
src/contact/: __init__.py  contact.py  converters.py
src/contact.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/ldap/: __init__.py  phone_book.py  phonebook.py
src/nc2ldap/: __init__.py  main.py
src/nc2ldap/contact/: contact.py  converters.py
src/nc2ldap/ldap/: phone_book.py
src/nc2ldap/nextcloud/: address_book.py
src/nc2ldap/tests/: test_contact.py  test_converters.py
src/nextcloud/: __init__.py  address_book.py  nextcloud.py  sample.vcf
tests/: test_contact.py  test_converters.py
